css/styles.css
* {
    font-family: 'Oswald', sans-serif;
}

#container {
    height: 820px;
    width: 700px;
    margin: 0 auto;
    border: 1px gainsboro solid;

}

h1 {
    margin: 0 auto;
    text-align: center;
}

h2 {
    text-align: center;
    margin-bottom: 0;
}

#row-box, #column-box{
    border: 1px black solid;
    width: 98%;
    margin: 0 auto;
}

#row-box {
    background-color: aliceblue;
    height: 42%;
}

#column-box {
    background-color: bisque;
    height: 42%;
}

#row-box p, #column-box p {
    border: 2px dotted black;
    padding: 1%;
    height: 20px;
    width: 12px;
    margin: 0;
}

#row-box p:nth-child(2), 
#row-box p:last-child {
    background-color: white;
}
#column-box p:nth-child(2),
#column-box p:last-child {
    background-color: white;
}

footer {
    text-align: center;
}

